# opentok-linux-sdk-samples

./: .gitignore  .travis.yml  Dockerfile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
Background-Substractor-Video-Capturer/: CMakeLists.txt  README.md  main.cpp
Basic-Video-Chat/: CMakeLists.txt  README.md  main.cpp
Basic-Video-Chat-With-Server/: CMakeLists.txt  README.md  main.cpp
Client-Observability/: CMakeLists.txt  README.md  main.cpp
Configurable-TURN-Servers/: CMakeLists.txt  README.md  main.cpp
Custom-Audio-Device/: CMakeLists.txt  README.md  main.cpp
Custom-Video-Capturer/: CMakeLists.txt  README.md  main.cpp
Meet-Publisher-Only/: CMakeLists.txt  README.md  main.cpp
OpenTokDemo-Basic-Video-Chat/: CMakeLists.txt  README.md  main.cpp
Publisher-Only/: CMakeLists.txt  README.md  main.cpp
Qt-Sample-App/: CMakeLists.txt  glvideowidget.cpp  glvideowidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  participant.h  qtpublisher.cpp  qtpublisher.h  qtsession.cpp  qtsession.h  qtsubscriber.cpp  qtsubscriber.h
RTSP-Stream-Video-Capturer/: CMakeLists.txt  README.md  main.cpp
Signaling/: CMakeLists.txt  README.md  main.cpp
Simple-Multiparty/: CMakeLists.txt  main.cpp
common/src/: config-sample.h  otk_thread.c  otk_thread.h  renderer.cpp
scripts/: build.sh  dependencies.sh
src/: conference.cpp  conference.h  credential_service_provider_helper.cpp  credential_service_provider_helper.h  renderer.cpp  renderer.h
wip/: CMakeLists.txt  README.md
wip/audio-device/src/: main.cpp
wip/common/src/: renderer.cpp  renderer.h
wip/connect-session-with-settings/src/: main.cpp
wip/connect-session/src/: main.cpp
wip/session-publish-subscribe/src/: main.cpp
wip/session-publish/src/: main.cpp
wip/session-signals/src/: main.cpp
wip/video-capturer/src/: main.cpp
